--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
 
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="https://img.icons8.com/bubbles/2x/login-rounded-right.png" />
     
     <title>User Authentication</title>
 </head>
